--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "{{ site.theme }}";
+
 .typewriter h1 {samoyed dogs
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
