--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,26 +2,5 @@
 ---
 
 @import "{{ site.theme }}";
-
-.typewriter h1 {samoyed dogs
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
-}
+background: rgb(155,151,214);
+background: linear-gradient(90deg, rgba(155,151,214,1) 0%, rgba(211,29,179,1) 100%, rgba(26,3,52,1) 100%, rgba(0,212,255,1) 100%);
