--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,10 @@
 ---
 
 @import "{{ site.theme }}";
-background: rgb(155,151,214);
-background: linear-gradient(90deg, rgba(155,151,214,1) 0%, rgba(211,29,179,1) 100%, rgba(26,3,52,1) 100%, rgba(0,212,255,1) 100%);
+<style>
+  .circle {
+	  height: 40px;
+	  width: 40px;
+	  background-color: black;
+	  border-radius: 50%;
+	}
